API and handlers update
